--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   --green-default: hsl(146deg 100% 35%);
   --green-dark: hsl(146deg 100% 28%);
   --green-darker: hsl(146deg 100% 24%);
-  --btn-transition: 200ms;
+  --default-transition: 200ms;
 }
 
 * {
@@ -88,7 +88,7 @@ button {
   font-size: 0.95em;
   margin-top: 5px;
   cursor: pointer;
-  transition: var(--btn-transition);
+  transition: var(--default-transition);
 }
 .create-list-btn:hover {
   background-color: var(--green-dark);
@@ -96,6 +96,7 @@ button {
 .create-list-btn:active {
   background-color: var(--green-darker);
 }
+
 .create-list-input {
   box-shadow: inset 0 0 0 3px hsl(146deg 100% 36%);
   border: none;
@@ -112,13 +113,53 @@ button {
   min-height: 80px;
   background-color: var(--white-default);
   border-radius: 10px;
-  padding: 21px 17px;
+  padding: 21px 17px 15px 17px;
   margin: 50px 0 0 20px;
 }
 
 .list-title {
   font-family: "Rubik";
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 600;
   color: var(--title-color);
+}
+
+/*---Cards---*/
+.card {
+  background: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  padding: 8px;
+  width: 275px;
+  margin-bottom: 12px;
+  cursor: grab;
+  transition: var(--default-transition);
+}
+.card:active {
+  cursor: grabbing;
+}
+.card:hover {
+  filter: brightness(0.95);
+}
+.card:first-child {
+  margin-top: 20px;
+}
+.card:last-child {
+  margin-bottom: 20px;
+}
+
+.card-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.add-new-card {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+
+  color: #5e6c84;
+  cursor: pointer;
 }
