--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,8 @@ button {
 .list {
   display: inline-flex;
   flex-direction: column;
-  min-height: 80px;
+  max-width: 300px;
+  width: -webkit-fill-available;
   background-color: var(--white-default);
   border-radius: 10px;
   padding: 21px 17px 15px 17px;
@@ -132,7 +133,6 @@ button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   padding: 8px;
-  width: 275px;
   margin-bottom: 12px;
   cursor: grab;
   transition: var(--default-transition);
