--- a/app/styles.css
+++ b/app/styles.css
@@ -25,7 +25,8 @@ button {
 .taskboard-main {
   height: 100vh;
   width: 100vw;
-  padding-top: 80px;
+  display: flex;
+  padding: 130px 0 0 25px;
   background: var(--bg-color-dark);
 }
 
@@ -46,6 +47,7 @@ button {
   display: inline-flex;
   height: 100%;
   align-items: center;
+  user-select: none;
 }
 
 .logo {
@@ -57,22 +59,24 @@ button {
 .logo-text {
   font-family: "Rubik";
   font-weight: 700;
-  font-size: 1.35em;
+  font-size: 22px;
   color: white;
   margin-top: 3px;
+  user-select: none;
 }
 
 .info-icon {
   margin-right: 20px;
+  user-select: none;
 }
 
 /*---Create list---*/
 .create-list-container {
   flex-direction: column;
   display: inline-flex;
-  margin: 50px 0 0 20px;
   background: var(--white-default);
-  padding: 5px;
+  padding: 10px;
+  height: fit-content;
   border-radius: 5px;
 
   /*!!!TEMPORARY!!!*/
@@ -82,11 +86,11 @@ button {
   width: 85px;
   border: none;
   background-color: hsl(146deg 100% 36%);
-  border-radius: 2px;
+  border-radius: 3px;
   height: 35px;
   color: white;
-  font-size: 0.95em;
-  margin-top: 5px;
+  font-size: 17px;
+  margin-top: 8px;
   cursor: pointer;
   transition: var(--default-transition);
 }
@@ -97,13 +101,59 @@ button {
   background-color: var(--green-darker);
 }
 
+.create-list-controls {
+  display: flex;
+  align-items: center;
+}
+
 .create-list-input {
   box-shadow: inset 0 0 0 3px hsl(146deg 100% 36%);
   border: none;
   border-radius: 3px;
-  padding: 15px;
+  padding: 13px;
   height: 40px;
   width: 320px;
+}
+
+.create-list-close {
+  width: 30px;
+  height: 30px;
+  margin-top: 9px;
+  margin-left: 8px;
+  cursor: pointer;
+  user-select: none;
+  filter: contrast(0.5);
+  transition: calc(var(--default-transition) - 100ms);
+}
+
+.create-list-close:hover {
+  filter: contrast(0.9);
+}
+
+.create-new-list-btn {
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  background: hsla(0, 0%, 100%, 0.14);
+  border: none;
+  border-radius: 5px;
+  padding: 12px 10px;
+  width: 300px;
+  color: var(--white-default);
+  transition: var(--default-transition);
+  cursor: pointer;
+}
+.create-new-list-btn:hover {
+  background: hsl(0deg 0% 100% / 11%);
+}
+.create-new-list-btn:active {
+  background: hsl(0deg 0% 100% / 9%);
+}
+
+.create-new-list-plus {
+  font-size: 20px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 /* ---Lists--- */
@@ -114,8 +164,9 @@ button {
   width: -webkit-fill-available;
   background-color: var(--white-default);
   border-radius: 10px;
+  height: fit-content;
   padding: 21px 17px 15px 17px;
-  margin: 50px 0 0 20px;
+  margin-right: 25px;
 }
 
 .list-title {
@@ -150,7 +201,7 @@ button {
 .card-text {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 400;
   user-select: none;
 }
 
@@ -175,11 +226,16 @@ button {
   background-color: hsla(218, 76%, 15%, 0.125);
 }
 
+.add-new-card-plus {
+  font-size: 20px;
+}
+
 .card-edit {
   width: 16px;
   height: 16px;
-  margin-top: 1px;
+  margin-top: 0.5px;
   opacity: 0;
+  user-select: none;
   transition: calc(var(--default-transition) - 70ms);
 }
 .card:hover > .card-edit {
