--- a/app/styles.css
+++ b/app/styles.css
@@ -16,6 +16,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 input,
 button {
   outline: none;
@@ -48,6 +52,7 @@ button {
   height: 100%;
   align-items: center;
   user-select: none;
+  touch-action: none;
 }
 
 .logo {
@@ -63,11 +68,13 @@ button {
   color: white;
   margin-top: 3px;
   user-select: none;
+  touch-action: none;
 }
 
 .info-icon {
   margin-right: 20px;
   user-select: none;
+  touch-action: none;
 }
 
 /*---Create list---*/
@@ -122,6 +129,7 @@ button {
   margin-left: 8px;
   cursor: pointer;
   user-select: none;
+  touch-action: none;
   filter: contrast(0.5);
   transition: calc(var(--default-transition) - 100ms);
 }
@@ -176,6 +184,10 @@ button {
 }
 
 /*---Cards---*/
+.cards-container {
+  min-height: 20px;
+}
+
 .card {
   display: flex;
   justify-content: space-between;
@@ -186,7 +198,6 @@ button {
   padding: 8px;
   margin-bottom: 12px;
   cursor: grab;
-  transition: var(--default-transition);
 }
 .card:active {
   cursor: grabbing;
@@ -203,6 +214,7 @@ button {
   font-size: 16px;
   font-weight: 400;
   user-select: none;
+  touch-action: none;
 }
 
 .add-new-card {
@@ -214,6 +226,7 @@ button {
   padding: 7px;
   transition: var(--default-transition);
   border-radius: 2px;
+  touch-action: none;
 
   color: hsl(218, 20%, 40%);
   cursor: pointer;
@@ -236,8 +249,19 @@ button {
   margin-top: 0.5px;
   opacity: 0;
   user-select: none;
+  touch-action: none;
   transition: calc(var(--default-transition) - 70ms);
 }
 .card:hover > .card-edit {
   opacity: 1;
+}
+
+/* Drag & Drop */
+.ui-sortable-helper {
+  transform: rotate(4deg);
+}
+
+.ui-sortable-placeholder {
+  background-color: hsla(228deg 54% 90% / 50%);
+  visibility: visible !important;
 }
