--- a/app/styles.css
+++ b/app/styles.css
@@ -47,7 +47,7 @@ button {
 }
 
 .logo-container,
-.info-bg-container {
+.bg-container {
   display: inline-flex;
   height: 100%;
   align-items: center;
@@ -69,9 +69,8 @@ button {
   user-select: none;
 }
 
-.info-icon {
-  margin-right: 20px;
-  user-select: none;
+.bg-icon {
+  filter: drop-shadow(2px 4px 10px black);
 }
 
 /*---Create list---*/
@@ -80,9 +79,12 @@ button {
   display: inline-flex;
   background: var(--white-default);
   padding: 10px;
-  height: fit-content;
+  min-width: 280px;
+  width: 300px;
+  height: 0;
   border-radius: 5px;
   display: none;
+  overflow: hidden;
 }
 .create-list-btn {
   width: 85px;
@@ -114,7 +116,7 @@ button {
   border-radius: 3px;
   padding: 13px;
   height: 40px;
-  width: 320px;
+  width: 100%;
 }
 
 .create-list-close {
@@ -204,7 +206,6 @@ button {
   padding: 12px 10px;
   width: 300px;
   color: var(--white-default);
-  transition: var(--default-transition);
   cursor: pointer;
 }
 .create-new-list-btn:hover {
@@ -317,4 +318,10 @@ button {
 .ui-sortable-placeholder {
   background-color: hsla(228deg 54% 90% / 50%);
   visibility: visible !important;
+}
+
+/* Header Info And BG */
+
+.info-container {
+  position: absolute;
 }
