--- a/app/styles.css
+++ b/app/styles.css
@@ -78,7 +78,6 @@ button {
   flex-direction: column;
   display: inline-flex;
   background: var(--white-default);
-  padding: 10px;
   min-width: 280px;
   width: 300px;
   height: 0;
@@ -205,6 +204,7 @@ button {
   border-radius: 5px;
   padding: 12px 10px;
   width: 300px;
+  min-width: 130px;
   color: var(--white-default);
   cursor: pointer;
 }
@@ -238,6 +238,16 @@ button {
   font-family: "Rubik";
   font-weight: 600;
   letter-spacing: 0.5px;
+}
+
+.list-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.delete-list {
+  width: 26px;
 }
 
 /*---Cards---*/
@@ -318,4 +328,10 @@ button {
 .ui-sortable-placeholder {
   background-color: hsla(228deg 54% 90% / 50%);
   visibility: visible !important;
+}
+
+/* Header Info And BG */
+
+.info-container {
+  position: absolute;
 }
