--- a/app/styles.css
+++ b/app/styles.css
@@ -32,9 +32,10 @@ textarea {
 /*---Main---*/
 .taskboard-main {
   height: 100vh;
-  width: 100vw;
+  min-width: 100vw;
+  width: fit-content;
   display: flex;
-  padding: 130px 0 0 25px;
+  padding: 131px 25px 0;
   background: var(--bg-color-dark);
 }
 
@@ -75,6 +76,10 @@ textarea {
 
 .bg-icon {
   filter: drop-shadow(2px 4px 10px black);
+  background-image: url(../assets/bg-icon.svg);
+  width: 40px;
+  height: 50%;
+  cursor: pointer;
 }
 
 /*---Create list---*/
@@ -161,6 +166,7 @@ textarea {
   margin-top: 8px;
   cursor: pointer;
   transition: var(--default-transition);
+  box-shadow: 0px 2px 4px rgb(0 0 0 / 25%);
 }
 .create-card-btn:hover {
   background-color: var(--green-dark);
@@ -232,25 +238,32 @@ textarea {
 .list {
   display: inline-flex;
   flex-direction: column;
-  max-width: 300px;
+  min-width: 300px;
   width: -webkit-fill-available;
   background-color: var(--white-default);
   border-radius: 10px;
   height: fit-content;
   padding: 21px 17px 15px 17px;
   margin-right: 25px;
+  max-width: 550px;
 }
 
 .list-title {
   font-family: "Rubik";
   font-weight: 600;
   letter-spacing: 0.5px;
+  padding: 4px;
 }
 
 .list-head {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.lists-container {
+  display: flex;
+  width: -webkit-fill-available;
 }
 
 .delete-list {
@@ -281,6 +294,7 @@ textarea {
   border-radius: 4px;
   padding: 8px;
   margin-bottom: 12px;
+  align-items: center;
   cursor: grab;
 }
 .card:active {
@@ -329,6 +343,7 @@ textarea {
   margin-top: 0.5px;
   opacity: 0;
   user-select: none;
+  cursor: pointer;
 
   transition: calc(var(--default-transition) - 70ms);
 }
@@ -336,10 +351,14 @@ textarea {
   opacity: 1;
 }
 
+.card-edit-close {
+  display: none;
+  cursor: pointer;
+}
+
 /* Drag & Drop */
 .ui-sortable-helper {
   transform: rotate(4deg);
-  cursor: grabbing;
 }
 
 .ui-sortable-placeholder {
@@ -363,4 +382,15 @@ textarea {
   color: black !important;
   background-color: transparent !important;
   border: 1px solid #c5c5c5 !important;
+}
+
+/* Card Editing */
+.card-text-input {
+  margin-right: 10px;
+  resize: vertical;
+  max-height: 100px;
+  display: none;
+  width: -webkit-fill-available;
+  min-height: 25px;
+  padding: 3px;
 }
